[gd_scene load_steps=4 format=3 uid="uid://cbsf0li1vbeat"]

[ext_resource type="Script" path="res://scripts/menus/main_menu.gd" id="1_ufoxk"]
[ext_resource type="Texture2D" uid="uid://c5c47gjuj4e6d" path="res://assets/art/menus/MainMenuIdle.png" id="2_0frmg"]
[ext_resource type="Texture2D" uid="uid://bkr84e417g0ev" path="res://assets/art/menus/MainMenuHover.png" id="3_oibft"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ufoxk")

[node name="ScreenIdle" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_0frmg")

[node name="ScreenHover" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_oibft")

[node name="StartButton" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 790.0
offset_top = 849.0
offset_right = 1117.0
offset_bottom = 1013.0

[connection signal="mouse_entered" from="StartButton" to="." method="_on_start_button_mouse_entered"]
[connection signal="mouse_exited" from="StartButton" to="." method="_on_start_button_mouse_exited"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
